# Ev2_Equipo7_Algoritmos2

./: CMakeLists.txt  sonar-project.properties  test_file.txt  tsp.cpp
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ford_fulkerson.cpp  ford_fulkerson.hpp  kruskal.cpp  kruskal.hpp  lineal.cpp  lineal.hpp  tsp.hpp
tests/: CMakeLists.txt  test_main.cpp
